2007-10-24  Peter Jones  <pjones@redhat.com>

	* pykickstart/commands/logvol.py: make all the parse methods
	inheritable, and only define them once.

	* pykickstart/commands/partition.py: ditto.

	* pykickstart/commands/raid.py: ditto.

2007-10-24  Peter Jones  <pjones@redhat.com>

	* pykickstart/handlers/f9.py: new for f9!

	* pykcikstart/handlers/control.py: add F9 stuff.

2007-10-23  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-10-22  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/method.py (FC3_Method._getParser):  Return the
	OptionParser instance on cdrom installs.

2007-10-18  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-10-17  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py:  Don't write out %end to packages and scripts
	if the syntax version is before it was introduced.

2007-10-15  Chris Lumens  <clumens@redhat.com>

	* po/no.po:  Remove obsolete translation (#332221).

2007-10-04  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

	* pykickstart/commands/:  Split argument setup into more methods to
	make overriding in subclasses easier.  Also simplify __str__ methods a
	bit in some of the more complex commands.

	* validator/ksvalidator:  Moved to tools/, where it should have gone
	in the first place.
	* setup.py:  Likewise.
	* po/Makefile:  Likewise.

	* po/pykickstart.pot, po/*.po:  Updated for new source locations.

2007-10-03  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

	* pykickstart/options.py (KSOptionParser.__init__):  If an option
	parser object has the same option added twice, allow the later one to
	override the former one.

	* pykickstart/parser.py (KickstartParser.handlePackageHdr):
	Undeprecate --excludedocs.

	* pykickstart/commands/device.py (F8_Device.parse):  Fix a traceback
	caused by reading off the end of an array.
