@@ -1,3 +1,10 @@
+2007-10-25  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart/commands/logvol.py (FC4_LogVol._setClassData):  Fix
+	typos in method name and in name of data object.
+
+	* pykickstart/version.py:  Add constants and loading support for F9.
+
 2007-10-24  Peter Jones  <pjones@redhat.com>
 
 	* pykickstart/commands/logvol.py: make all the parse methods
